--- a/style.css
+++ b/style.css
@@ -1,42 +1,94 @@
-*{
+* {
     font-family: 'Poppins', sans-serif;
-    background-color: #070707;
+    background-color: black;
     color: aliceblue;
+    box-sizing: border-box;
+
 }
-.divone h1{
+
+body {
+    margin: 0;
+}
+
+.divone h1 {
     font-size: 40px;
     font-weight: bold;
     color: aliceblue;
 }
-span{
+
+span {
     color: #4d648d;
 
 }
-.divone h3{
+
+.divone h3 {
     color: aliceblue;
     font-weight: bold;
 }
-section{
+
+.head-banner {
     display: flex;
+    background-image: url(images/Untitled\ design.png);
+    background-repeat: no-repeat;
+
+
+
 }
-.divone{
+
+.divone {
     width: 50%;
     padding-left: 4%;
     padding-right: 5px;
     margin-top: 40px;
 }
-.divtwo{
+
+.divtwo {
     width: 50%;
 }
-.divtwo img{
+
+.divtwo img {
     width: 85%;
 }
-.divone a{
+
+.divone a {
     border: 2px solid transparent;
     text-decoration: none;
-    background-color: #4d648d;
-    padding: 9px;
+    background-image: linear-gradient(#4d648d, #94A2BA);
+    padding: 9px 38px;
     font-size: 22px;
     border-radius: 9px;
-    
+    font-weight: 700;
+
+
+}
+.secondone{
+    display: flex;
+   
+}
+.divthree{
+    width: 50%;
+}
+.divthree img{
+    width: 85%;
+}
+.divfour{
+    width: 50%;
+    padding-right: 6%;
+    padding-top: 17%;
+}
+.divfour h1{
+    font-size: 50px;
+}
+.divfour h3{
+    font-size: 30px;
+    font-weight: 700;
+}
+.divfour a{
+    border: 2px solid transparent;
+    text-decoration: none;
+    background-image: linear-gradient(#4d648d, #94A2BA);
+    padding: 9px 38px;
+    font-size: 22px;
+    border-radius: 9px;
+    font-weight: 700;
 }
